[package]

name = "knusbaum.consul"
version = "0.2.0"
authors = ["Andrew Useckas <andrew.useckas@threat-x.com>", "Stu Small <stuart.small@threat-x.com>", "YoungKing <yanckin@gmail.com>"]
description = "Patched version of the Rust client libray for Consul HTTP API"
documentation = "https://docs.rs/consul/"
repository = "https://github.com/knusbaum/consul-rust"
license = "MIT/Apache-2.0"

readme = "README.md"
keywords = ["consul", "discovery"]

exclude = [
    "data/*",
]

[dependencies]
serde = "1"
serde_json = "1"
serde_derive = "1"
reqwest = "0.9"

